add comments and google_search

--- a/themes/jacman/_config.yml
+++ b/themes/jacman/_config.yml
@@ -90,7 +90,8 @@ links:
 
 
 #### Comment
-duoshuo_shortname:    ## e.g. wuchong   your duoshuo short name.
+duoshuo_shortname: hzc199307
+   ## e.g. wuchong   your duoshuo short name.
 disqus_shortname:     ## e.g. wuchong   your disqus short name.
 
 #### Share button
@@ -121,8 +122,9 @@ totop: true           ## if you want to scroll to top in every post set the valu
 
 #### Custom Search
 google_cse: 
-  enable: false
-  cx:   ## e.g. 018294693190868310296:abnhpuysycw your Custom Search ID.
+  enable: true
+  cx: 000981288436307906044:jcmg6xaswca
+  ## e.g. 018294693190868310296:abnhpuysycw your Custom Search ID.
 ## https://www.google.com/cse/ 
 ## To enable the custom search You must create a "search" folder in '/source' and a "index.md" file
 ## set the 'front-matter' as
@@ -143,3 +145,4 @@ leancloud_visitors:
   enable: true
   app_id: hf8PxdTxBd4viu7KMI63xbgw-gzGzoHsz
   app_key: VAj0e9mFIhD632UX67zCn3nu
+
