--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ email: hzc199307@gmail.com
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: http://yoursite.com
+url: http://hzc199307.github.io/
 root: /
 permalink: :title/  
 ###:year/:month/:day/:title/
