--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,9 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Forward
+title: Forward 
+# | HeZhichao's Homepage
+# | 贺智超
 subtitle: To be a Practical Idealist
 description: To be a Practical Idealist
 author: HeZhichao
@@ -13,7 +15,8 @@ email: hzc199307@gmail.com
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: http://hzc199307.github.io/
+url: http://hezhichao.cn/
+## http://hzc199307.github.io/
 root: /
 permalink: :title/  
 ###:year/:month/:day/:title/
@@ -26,6 +29,7 @@ tag_dir: tags
 archive_dir: archives
 category_dir: categories
 code_dir: downloads/code
+  ## code_dir得再source路径下，具体看代码$HOME\node_modules\hexo\lib\plugins\tag\include_code.js
 i18n_dir: :lang
 skip_render:
 
@@ -59,7 +63,7 @@ time_format: HH:mm:ss
 
 # Pagination
 ## Set per_page to 0 to disable pagination
-per_page: 10
+per_page: 3
 pagination_dir: page
 
 # Extensions
